--- a/registro.html
+++ b/registro.html
@@ -37,10 +37,10 @@
             </a>
             <ul class="navbar-links">
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="">Contacto</a></li>
-                <li><a href="">Noticias</a></li>
-                <li><a href="">Nosotros</a></li>
-                <li><a href="">Blog</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="noticias.html">Noticias</a></li>
+                <li><a href="nosotros.html">Nosotros</a></li>
+                <li><a href="blog.html">Blog</a></li>
                 <li><a id="link-inicio-sesion" href="inicio-sesion.html">Iniciar Sesión</a></li>
             </ul>
         </nav>
