--- a/blog.html
+++ b/blog.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
-<html lang="es"><head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>HuertoHogar – Blog</title>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&amp;family=Playfair+Display:wght@600;700&amp;display=swap" rel="stylesheet"/>
-<link rel="stylesheet" href="css/tokens.css">
-<link rel="stylesheet" href="css/base.css">
-<link rel="stylesheet" href="css/components.css">
-<link rel="stylesheet" href="css/pages/blog.css">
-<link rel="stylesheet" href="css/overrides.css">
-<!-- Nota: css/style.legacy.css es respaldo y NO se carga. -->
+<html lang="es">
+
+<head>
+  <meta charset="utf-8" />
+  <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+  <title>HuertoHogar – Blog</title>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&amp;family=Playfair+Display:wght@600;700&amp;display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="css/tokens.css">
+  <link rel="stylesheet" href="css/base.css">
+  <link rel="stylesheet" href="css/components.css">
+  <link rel="stylesheet" href="css/pages/blog.css">
+  <link rel="stylesheet" href="css/overrides.css">
+  <!-- Nota: css/style.legacy.css es respaldo y NO se carga. -->
 </head>
 <!-- Favicon (Windows/Chrome/Edge/Firefox) -->
 <link rel="icon" type="image/png" href="img/logo_icono.png?v=1">
@@ -21,59 +25,79 @@
 
 <!-- Safari (macOS) pestaña anclada -->
 <link rel="mask-icon" href="img/safari-pinned-tab.svg" color="#2E8B57">
+
 <body class="page-blog">
-    <header class="nav">
+  <header class="nav">
     <!-- Logo -->
     <div class="nav-logo">
       <a href="index.html">
         <img src="img/huertologo.jpeg" alt="HuertoHogar">
       </a>
     </div>
-  
-    
+
+
     <nav class="nav_links">
       <a href="contacto.html">Contacto</a>
       <a href="noticias.html">Noticias</a>
       <a href="nosotros.html">Nosotros</a>
       <a href="blog.html">Blog</a>
-      <a class="btn btn--primary" href="contacto.html">Iniciar sesión</a>
+      <a class="btn btn--primary" href="inicio-sesion.html">Iniciar sesión</a>
     </nav>
   </header>
 
-<section class="container section-pad">
-<h1>Blog</h1>
-<div class="grid-cards">
-<article class="card"><img src="img/espinaca.jpg"/><div class="card__body"><h3>Planifica tu siembra</h3><p>Calendario de temporada para empezar.</p><a class="link" href="post.html">Leer más →</a></div></article>
-<article class="card"><img src="img/zanahorias.jpg"/><div class="card__body"><h3>Sustratos caseros</h3><p>3 mezclas rendidoras para macetas.</p></div></article>
-<article class="card"><img src="img/miel2.jpg"/><div class="card__body"><h3>Receta con miel</h3><p>Ensalada verde con toque dulce.</p></div></article>
-</div>
-</section>
-<footer class="site-footer">
-<div class="footer-inner container">
-<div class="footer-brand">
-<h3>HuertoHogar</h3><p>Fresco, local y sustentable. Del campo a tu mesa.</p>
-</div>
-<div class="footer-links">
-<h4>Secciones</h4>
-<ul>
-<li><a href="index.html">Inicio</a></li>
-<li><a href="blog.html">Blog</a></li>
-<li><a href="nosotros.html">Nosotros</a></li>
-<li><a href="noticias.html">Noticias</a></li>
-<li><a href="contacto.html">Contacto</a></li>
-</ul>
-</div>
-<div class="footer-contact">
-<h4>Contacto</h4>
-<ul>
-<li>Email: <a href="mailto:hola@huertohogar.cl">hola@huertohogar.cl</a></li>
-<li>WhatsApp: <a href="#">+56 9 1234 5678</a></li>
-<li>Instagram: <a href="#">@huerto.hogar</a></li>
-</ul>
-</div>
-</div>
-<div class="footer-bottom"><div class="container small">© <span id="year"></span> HuertoHogar — Todos los derechos reservados.</div></div>
-</footer>
-<script>(function(){var y=document.getElementById('year'); if(y) y.textContent=new Date().getFullYear();})();</script>
+  <section class="container section-pad">
+    <h1>Blog</h1>
+    <div class="grid-cards">
+      <article class="card"><img src="img/espinaca.jpg" />
+        <div class="card__body">
+          <h3>Planifica tu siembra</h3>
+          <p>Calendario de temporada para empezar.</p><a class="link" href="post.html">Leer más →</a>
+        </div>
+      </article>
+      <article class="card"><img src="img/zanahorias.jpg" />
+        <div class="card__body">
+          <h3>Sustratos caseros</h3>
+          <p>3 mezclas rendidoras para macetas.</p>
+        </div>
+      </article>
+      <article class="card"><img src="img/miel2.jpg" />
+        <div class="card__body">
+          <h3>Receta con miel</h3>
+          <p>Ensalada verde con toque dulce.</p>
+        </div>
+      </article>
+    </div>
+  </section>
+  <footer class="site-footer">
+    <div class="footer-inner container">
+      <div class="footer-brand">
+        <h3>HuertoHogar</h3>
+        <p>Fresco, local y sustentable. Del campo a tu mesa.</p>
+      </div>
+      <div class="footer-links">
+        <h4>Secciones</h4>
+        <ul>
+          <li><a href="index.html">Inicio</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <li><a href="nosotros.html">Nosotros</a></li>
+          <li><a href="noticias.html">Noticias</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
+        </ul>
+      </div>
+      <div class="footer-contact">
+        <h4>Contacto</h4>
+        <ul>
+          <li>Email: <a href="mailto:hola@huertohogar.cl">hola@huertohogar.cl</a></li>
+          <li>WhatsApp: <a href="#">+56 9 1234 5678</a></li>
+          <li>Instagram: <a href="#">@huerto.hogar</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      <div class="container small">© <span id="year"></span> HuertoHogar — Todos los derechos reservados.</div>
+    </div>
+  </footer>
+  <script>(function () { var y = document.getElementById('year'); if (y) y.textContent = new Date().getFullYear(); })();</script>
 </body>
+
 </html>
