--- a/inicio-sesion.html
+++ b/inicio-sesion.html
@@ -32,10 +32,10 @@
             </a>
             <ul class="navbar-links">
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="">Contacto</a></li>
-                <li><a href="">Noticias</a></li>
-                <li><a href="">Nosotros</a></li>
-                <li><a href="">Blog</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="noticias.html">Noticias</a></li>
+                <li><a href="nosotros.html">Nosotros</a></li>
+                <li><a href="blog.html">Blog</a></li>
                 <li><a id="link-registro-login" href="registro.html">Registrarme</a></li>
             </ul>
         </nav>
