--- a/nosotros.html
+++ b/nosotros.html
@@ -37,7 +37,7 @@
       <a href="noticias.html">Noticias</a>
       <a href="nosotros.html">Nosotros</a>
       <a href="blog.html">Blog</a>
-      <a class="btn btn--primary" href="contacto.html">Iniciar sesión</a>
+      <a class="btn btn--primary" href="inicio-sesion.html">Iniciar sesión</a>
     </nav>
   </header>
 <section class="container section-pad">
